2006-10-17  Jeroen Frijters  <jeroen@frijters.net>

	* native/jni/classpath/jcl.c
	(JNI_OnLoad): Corrected calling convention.

2006-10-16  Roman Kennke  <kennke@aicas.com>

	* javax/swing/TransferHandler.java
	(propertyName): New field.
	(TransferHandler(String)): Store property name in field.
	(canImport): Implemented stub method.
	(exportDone): This is a no-op. Removed not-implemented mark.
	(getPropertyDataFlavor): New helper method.
	(getPropertyDescriptor): New helper method.

2006-10-16  Roman Kennke  <kennke@aicas.com>

	* javax/swing/AbstractButton.java
	(AccessibleJButton.getAfterIndex): Implemented.
	(AccessibleJButton.getAtIndex): Implemented.
	(AccessibleJButton.getBeforeIndex): Implemented.
	(AccessibleJButton.getCharacterAttribute): Completed incomplete
	method implementation.

2006-10-16  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JLabel.java
	(AccessibleJLabel.getIndexAtPoint): Implemented.
	(AccessibleJLabel.getCharacterBounds): Implemented.
	(AccessibleJLabel.getTextRectangle): New helper method.

2006-10-16  Roman Kennke  <kennke@aicas.com>

	* javax/swing/filechooser/FileSystemView.java
	(getFileSystemView): Mark as implemented.

2006-10-14  Roman Kennke  <kennke@aicas.com>

	PR 27957
	* javax/swing/JComponent.java
	(toolTipText): Removed field.
	(createToolTip): Don't set tooltip text here. This is done
	in the ToolTipManager.
	(setToolTipText): Set tooltip text as client property.
	(getToolTipText): Get tooltip text from client property.
	* javax/swing/ToolTipManager.java
	(currentComponent): Made field non-static and of type JComponent.
	(currentPoint): Made field non-static.
	(currentTip): Made field non-static.
	(popup): Made field non-static.
	(toolTipText): New field. Stores the current tooltip text.
	(checkTipUpdate): New helper method. Checks for updates of
	the tooltip text and triggers the appropriate actions.
	(getContentPaneDeepestComponent): Removed unneeded casts.